# WingGifEditor

./: .gitignore  CMakeLists.txt  README.md  WingGifEditor.pro  createreversedialog.cpp  createreversedialog.h  exportdialog.cpp  exportdialog.h  gifeditorscene.cpp  gifeditorscene.h  main.cpp  mainwindow.cpp  mainwindow.h  playgifmanager.cpp  playgifmanager.h  push.sh  reduceframedialog.cpp  reduceframedialog.h  resources.qrc  scalegifdialog.cpp  scalegifdialog.h  settingdialog.cpp  settings.json
Class/: SizeGripItem.cpp  SizeGripItem.h  clipboardhelper.cpp  clipboardhelper.h  cuttingselector.cpp  cuttingselector.h  gifeditor.cpp  gifeditor.h  gifeditorscene.cpp  gifeditorscene.h  settings.cpp  settings.h
Dialog/: aboutsoftwaredialog.cpp  createreversedialog.h  cropgifdialog.cpp  cropgifdialog.h  exportdialog.cpp  exportdialog.h  mainwindow.cpp  mainwindow.h  newdialog.cpp  newdialog.h  reduceframedialog.cpp  reduceframedialog.h  scalegifdialog.cpp  scalegifdialog.h  settingdialog.cpp  settingdialog.h  waitingdialog.cpp  waitingdialog.h
GifImage/: WingGif.pri  gifhelper.cpp  gifhelper.h  gifimage.cpp  gifimage.h  giflib.pri
UndoCommand/: cropimagecommand.cpp  cropimagecommand.h  delayframecommand.cpp  delayframecommand.h  delframedircommand.cpp  delframedircommand.h  flipframecommand.cpp  flipframecommand.h  framechangedcommand.cpp  framechangedcommand.h  insertframecommand.cpp  insertframecommand.h  moveframecommand.cpp  moveframecommand.h  reduceframecommand.cpp  reduceframecommand.h  removeframecommand.cpp  removeframecommand.h  replaceframecommand.cpp  (+7 more)
(+97 files in other folders)
